--- a/freedommqtt/package.json
+++ b/freedommqtt/package.json
@@ -6,7 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.4.1",
+    "bootstrap-switch-button-react": "^1.2.0",
+    "classnames": "^2.2.6",
+    "lodash": "^4.17.15",
     "paho-mqtt": "^1.1.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0"
@@ -31,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "node-sass-chokidar": "^1.4.0",
+    "npm-run-all": "^4.1.5"
   }
 }
